More chaotic tests